# ukftractography_dp

./: .gitignore  CMakeLists.txt  Common.cmake  README.md  SuperBuild.cmake  UKFTractography.cmake
CMake/: ExternalData.cmake  ExternalProjectDependency.cmake  ExternalProjectGenerateProjectDescription.cmake  ITKSetStandardCompilerFlags.cmake  NAMICExternalProjectsExternalData.cmake
CompressedSensing/: CMakeLists.txt
SuperBuild/: External_Boost.cmake  External_Boost_configureboost.cmake  External_Eigen.cmake  External_ITK.cmake  External_Ridgelets.cmake  External_SlicerExecutionModel.cmake  External_SphericalRidgelets.cmake  External_VTK.cmake  External_teem.cmake  External_zlib.cmake
UKFTractography/: CMakeLists.txt  UKFTractography.cxx  UKFTractography.xml
UKFTractography/Testing/: CMakeLists.txt  CompareFibers.cc
common/: BRAINSThreadControl.cxx  BRAINSThreadControl.h  linalg.h  ukf_types.h
examples/: DCS_test_full.sh  HCP_test1.sh  HCP_test2.sh  HCP_test_1.sh  HCP_test_stem.sh  adhd_test.sh  adhd_test_full.sh  adhd_test_full_leak.sh  adhd_test_full_profiling.sh  adhd_test_init_multi.sh  adhd_test_simple.sh  adhd_test_valgrind.sh  hcp_test.sh  log.txt  log2.txt  profile_HCP_test1.sh  sample_run.sh  sample_run_ridg.sh  seeds.vtk
fibertractdispersion/: CMakeLists.txt  computedispersion.cxx  fiberbundle.cxx
ukf/: CMakeLists.txt  ISignalData.h  NrrdData.cc  NrrdData.h  QuadProg++_Eigen.cc  QuadProg++_Eigen.h  cli.cc  dwi_normalize.cc  filter_Full1T.cc  filter_Full1T.h  filter_Full1T_FW.cc  filter_Full1T_FW.h  filter_Full2T.cc  filter_Full2T.h  filter_Full2T_FW.cc  filter_Full2T_FW.h  filter_Full3T.cc  filter_Full3T.h  filter_NODDI1F.cc  filter_NODDI1F.h  filter_NODDI2F.cc  filter_NODDI2F.h  filter_Simple1T.cc  filter_Simple1T.h  filter_Simple1T_FW.cc  filter_Simple1T_FW.h  filter_Simple2T.cc  filter_Simple2T.h  filter_Simple2T_FW.cc  filter_Simple2T_FW.h  filter_Simple3T.cc  filter_Simple3T.h  filter_model.cc  filter_model.h  filter_ridg.cc  filter_ridg.h  lfbgsb.hpp  math_utilities.h  ridgelets_inc.h  seed.cc  (+13 more)
vtk2mask/: Array3D.h  (+2 more)
(+6 files in other folders)
